# dspy-experimentation

./: .gitignore  README.md  pyproject.toml
src/: main.py  products.json  recsys_bootstrapfeshot.json  recsys_dataset.json  recsys_labelled_fewshot.json  signature.ipynb
src/utils/: metrics.py  rec_system.py  retriever.py
tests/: test_main.py
